added carousel to home page, added boostrap and kendo ui, updated site to use extension-less permalinks, updated navigation to happen dynamically

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,18 +4,13 @@
     <nav id="nav">
         <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-<!--             <li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
-            <li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li> -->
             <li><a href="http://wiki.sbhackerspace.com">Wiki</a></li>
-            <li><a href="{{ site.baseurl }}/irc.html">IRC</a></li>
-            <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/contact.html">Contact Us</a></li>
-            {% for page in site.pages %}
+			{% assign sorted_pages = site.pages | sort:"sort" %}
+            {% for page in sorted_pages %}
                   {% if page.title %}
-                    <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+                    <li><a class="page-link {% if page.class %} {{ page.class }} {% endif %}" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
                   {% endif %}
             {% endfor %}
-            <li><a href="{{ site.baseurl }}/sign-up.html" class="button special">Sign Up</a></li>
         </ul>
     </nav>
 </header>
