--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
                 <h2>Charitable Contributions</h2>
                 <p>Santa Barbara Hackerspace is a 501(c)(3) federal non-profit. Donations are tax deductible in The United States except where prohibited by law.</p>
                 <ul class="icons">
-                    <li><a href="https://twitter.com/sbhackerspace" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://twitter.com/{{twitter_username}}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                     <li><a href="https://www.instagram.com/sbhackerspace/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
                     <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
