--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,7 @@
 		input[type="reset"].alt,
 		input[type="button"].alt,
 		.button.alt {
-			background-color: transparent;
+			background-color: rgba(255, 255, 255, 0.65);;
 			box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.25);
 			color: #666f77 !important;
 		}
@@ -845,7 +845,7 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 6em 0 4em 0;
+		padding: 2em 0 4em 0;
 	}
 
 		.wrapper.style1 {
