--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,41 +5,41 @@
             <div class="6u">
                 <div class="row collapse-at-2">
                     <div class="6u">
-                        <h3>Accumsan</h3>
-                        <ul class="alt">
-                            <li><a href="#">Nascetur nunc varius</a></li>
-                            <li><a href="#">Vis faucibus sed tempor</a></li>
-                            <li><a href="#">Massa amet lobortis vel</a></li>
-                            <li><a href="#">Nascetur nunc varius</a></li>
+                        <h3>Contact Us</h3>
+                        <ul class="actions">
+                            <li>General Inquiries: info@sbhackerspace.com</li>
+                        </br>
+                            <li>Phone: (805) 242-2533</li>
+                        </br>
+                            <li>5728 Thornwood Drive</br> Goleta, CA</li>
                         </ul>
                     </div>
                     <div class="6u">
-                        <h3>Faucibus</h3>
-                        <ul class="alt">
-                            <li><a href="#">Nascetur nunc varius</a></li>
-                            <li><a href="#">Vis faucibus sed tempor</a></li>
-                            <li><a href="#">Massa amet lobortis vel</a></li>
-                            <li><a href="#">Nascetur nunc varius</a></li>
+                        <h3>Hours of Operation </h3>
+                        <h3>for non-members:</h3>
+                        <ul class="actions">
+                            <li>Monday - Friday: By appointment</li>
+                            </br>
+                            <li>Saturday: Open meeting 2:00 pm until midnight</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="6u">
                 <h2>Charitable Contributions</h2>
-                <p>Santa Barbara Hackerspace is a 501(c)(3) federal non-profit. Donations are tax deductible in The United States except where prohibited by law.</p>
-                <ul class="icons">
-                    <li><a href="https://twitter.com/{{twitter_username}}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="https://www.instagram.com/sbhackerspace/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="http://irc.sbhackerspace.com" class="icon fa-comment"><span class="label">IRC</span></a></li>
-                </ul>
+                <p>Santa Barbara Hackerspace is a 501(c)(3) federally recognized non-profit. Donations are tax deductible in The United States except where prohibited by law.</p>
             </div>
         </div>
         <ul class="copyright">
-            <li>&copy; Santa Barbara Hackerspace. All rights reserved.</li>
+            <li>&copy; 2018 Santa Barbara Hackerspace. All rights reserved.</li>
             <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
             <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+            <ul class="icons">
+                <li><a href="https://twitter.com/{{twitter_username}}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="http://irc.sbhackerspace.com" class="icon fa-comment"><span class="label">IRC</span></a></li>
+            </ul>
+
         </ul>
     </div>
 </footer>
