Change "SBHX" in hero carosel to "Santa Barbara Hackerspace"

--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-  {% include /head.html %}
+	{% include /head.html %}
 
 	<body id="top">
 
-        {% include /header.html %}
+		{% include /header.html %}
 
 		<div id="homepage-slider" class="carousel slide" data-ride="carousel" data-interval="10000" data-pause="hover">
 			<!-- Indicators -->
@@ -22,9 +22,9 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
-					<img style="width:100%;" src="/images/carousel/balloon.jpg" alt="Weather Balloon Launch"> 
+					<img style="width:100%;" src="/images/carousel/balloon.jpg" alt="Weather Balloon Launch">
 					<div class="carousel-caption">
-						<h1>SBHX</h1>
+						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
 							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
@@ -34,7 +34,7 @@
 				<div class="item">
 					<img style="width:100%;" src="/images/carousel/eagle_cad_class.jpg" alt="Swiss teaching an Eagle CAD class">
 					<div class="carousel-caption">
-						<h1>SBHX</h1>
+						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
 							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
@@ -42,19 +42,19 @@
 					</div>
 				</div>
 				<div class="item">
-				<img style="width:100%;" src="/images/carousel/sem_operation.jpg" alt="A visitor checking out the SEM in operation">
-				<div class="carousel-caption">
-					<h1>SBHX</h1>
-					<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
-					<ul class="actions">
-						<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
-					</ul>
-				</div>
+					<img style="width:100%;" src="/images/carousel/sem_operation.jpg" alt="A visitor checking out the SEM in operation">
+					<div class="carousel-caption">
+						<h1>Santa Barbara Hackerspace</h1>
+						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
+						<ul class="actions">
+							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="item">
 					<img style="width:100%;" src="/images/carousel/old_space.jpg" alt="A general meeting at our previous location">
 					<div class="carousel-caption">
-						<h1>SBHX</h1>
+						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
 							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
@@ -64,7 +64,7 @@
 				<div class="item">
 					<img style="width:100%;" src="/images/carousel/sbhx_class.jpg" alt="An class from the Old Hackerspace">
 					<div class="carousel-caption">
-						<h1>SBHX</h1>
+						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
 							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
@@ -74,7 +74,7 @@
 				<div class="item">
 					<img style="width:100%;" src="/images/carousel/sem_inside.jpg" alt="A perspective shot of Swiss working on the SEM">
 					<div class="carousel-caption">
-						<h1>SBHX</h1>
+						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
 							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
@@ -93,11 +93,11 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
-        {{ content }}
+		{{ content }}
 
-        {% include /footer.html %}
-		
+		{% include /footer.html %}
+
 		{% include /scripts.html %}
-    </body>
+	</body>
 
 </html>
