Link to our twitter instead of just twitter.com

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
             <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
             <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
             <ul class="icons">
-                <li><a href="https://twitter.com/{{twitter_username}}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://twitter.com/sbhackerspace" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="http://irc.sbhackerspace.com" class="icon fa-comment"><span class="label">IRC</span></a></li>
             </ul>
