Updated signup page links

--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -27,7 +27,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
@@ -37,7 +37,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
@@ -47,7 +47,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
@@ -57,7 +57,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 						<h1>Santa Barbara Hackerspace</h1>
 						<p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
 						<ul class="actions">
-							<li><a href="/sign-up/" class="button big special">Sign Up</a></li>
+							<li><a href="https://signup.sbhackerspace.com" class="button big special">Sign Up</a></li>
 						</ul>
 					</div>
 				</div>
