Adding privacy policy, updated wiki link url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav id="nav">
         <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="http://wiki.sbhackerspace.com">Wiki</a></li>
+            <li><a href="https://github.com/sbhackerspace/sbhackerspace.github.io/wiki" target="_blank">Wiki</a></li>
 			{% assign sorted_pages = site.pages | sort:"sort" %}
             {% for page in sorted_pages %}
                   {% if page.title %}
