Added Donate Now button.  Also removed page stub/redirect for signup link.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,8 @@
                     <li><a class="page-link {% if page.class %} {{ page.class }} {% endif %}" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
                   {% endif %}
             {% endfor %}
+			<li><a class="page-link button special" href="https://signup.sbhackerspace.com" target="_blank">SIGN UP</a></li>
+			<li><a class="page-link button special" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=MU5B8KCW68K98&source=url" target="_blank">DONATE</a></li>
         </ul>
     </nav>
 </header>
