Move boilerplate pages to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,15 +31,15 @@
             </div>
         </div>
         <ul class="copyright">
-            <li>&copy; 2018 Santa Barbara Hackerspace. All rights reserved.</li>
-            <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-            <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
-            <ul class="icons">
-                <li><a href="https://twitter.com/sbhackerspace" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="http://irc.sbhackerspace.com" class="icon fa-comment"><span class="label">IRC</span></a></li>
-            </ul>
+            <li>&copy; Santa Barbara Hackerspace</li>
+            <li><a href="https://twitter.com/sbhackerspace" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://www.facebook.com/sbhackerspace/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+        </ul>
 
+        <ul class="copyright">
+            <li><a href="{{ site.baseurl }}{% link terms-conditions.html %}">Terms and Conditions</a></li>
+            <li><a href="{{ site.baseurl }}{% link privacy-policy.html %}">Privacy Policy</a></li>
+            <li><a href="{{ site.baseurl }}{% link contact.html %}">Contact Us</a></li>
         </ul>
     </div>
 </footer>
