--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    {% include /head.html %}
-	<body id="top">
-        {% include /header.html %}
+    {% include head.html %}
+    <body id="top">
+        {% include header.html %}
 
         {{ content }}
 
-        {% include /footer.html %}
-		
-		{% include /scripts.html %}
+        {% include footer.html %}
+
+        {% include scripts.html %}
     </body>
 </html>
