--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
     <meta name="description" content="{{ site.description }}" />
     <meta name="keywords" content="{{ site.keywords }}" />
 
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
+    {% feed_meta %}
+
     <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
