--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,9 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
     {% feed_meta %}
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/skel.css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/style-xlarge.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/skel.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style-xlarge.css" />
 
     <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.1.118/styles/kendo.common.min.css" />
