--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://kendo.cdn.telerik.com/2017.1.118/js/kendo.all.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="{{ site.baseurl }}/js/skel.min.js"></script>
-<script src="{{ site.baseurl }}/js/skel-layers.min.js"></script>
-<script src="{{ site.baseurl }}/js/init.js"></script>
+<script src="{{ site.baseurl }}/assets/js/skel.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/skel-layers.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/init.js"></script>
