--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -987,7 +987,7 @@
 
 	#banner {
 		background-color: #666666;
-		background-image: url("../images/sem-screens.jpg");
+		background-image: url("../images/banners/sem-screens.jpg");
 		background-size: cover;
 		background-position: center center;
 		background-repeat: no-repeat;
